add tutorial and remove jupyterlite base code

--- a/content/Schelling/analysis.ipynb
+++ b/content/Schelling/analysis.ipynb
@@ -21,8 +21,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import piplite\n",
-    "await piplite.install(\"mesa\")"
+    "%pip install mesa"
    ]
   },
   {
